--- a/IMS_Purchase_Module.ipynb
+++ b/IMS_Purchase_Module.ipynb
@@ -6,7 +6,7 @@
       "name": "IMS Purchase Module.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOb58B3zHu2i2TdtMWzvhMn",
+      "authorship_tag": "ABX9TyMW030uoFRIzQQLmQ9NOT+G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,6 +46,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lEEIxELI6GNa"
+      },
+      "source": [
+        "Sir, this is the purchase module for the inventory management system. I tried to add the functionality of user being able to purchase more than one items at a time and I was successful in that but I don't know while updating the sales file I was getting some error \"set object is not JSON serializable\", I was trying to remove that error but the deadline was close so I removed that functionality."
+      ]
     },
     {
       "cell_type": "code",
