--- a/IMS_Purchase_Module.ipynb
+++ b/IMS_Purchase_Module.ipynb
@@ -6,7 +6,7 @@
       "name": "IMS Purchase Module.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOfMWzlAwoxGdl0PKA/fcDm",
+      "authorship_tag": "ABX9TyOh+VoHJBV/uKTQira0oiPl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
       },
       "source": [
         "Sir, this is the purchase module for the inventory management system. I tried to add the functionality of user being able to purchase more than one items at a time and I was successful in that but I don't know while updating the sales file I was getting some error \"set object is not JSON serializable\", I was trying to remove that error but the deadline was close so I removed that functionality.\n",
-        "Also, All 5 transaction shown in the sales file, I have done throw this code."
+        "Also, All 5 transaction shown in the sales file, I have done through this code."
       ]
     },
     {
