--- a/IMS_Addition_Module.ipynb
+++ b/IMS_Addition_Module.ipynb
@@ -6,7 +6,7 @@
       "name": "IMS Addition Module.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNIq4xRVA4qZ5dGqGD6vkKM",
+      "authorship_tag": "ABX9TyOSHBk14N1A2Z3UZADtvV68",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,6 +56,15 @@
           "metadata": {},
           "execution_count": 10
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "f7Wouyff6yBQ"
+      },
+      "source": [
+        "The product ID 31, I have added that through this code and the quantity of Product ID 1 I have updated that from 9 to 10 through this code aswell."
       ]
     },
     {
